--- a/service/static/index1.html
+++ b/service/static/index1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Pet Demo RESTful Service</title>
+    <title>Customer Demo RESTful Service</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,7 +12,7 @@
   <body>
     <div class="container">
         <div class="page-header">
-            <h1>Pet Demo REST API Service</h1>
+            <h1>Customer Demo REST API Service</h1>
         </div>
 
         <!-- Flash Message -->
@@ -87,7 +87,7 @@
 
         <footer>
           <br><br>
-          <p>&copy; NYU DevOps Company 2017</p>
+          <p>&copy; NYU DevOps Company 2019 - Customer Team</p>
         </footer>
         </div><!--/span-->
      </div><!--/row-->
